add self session manager handler

--- a/patient-webapp/src/main/webapp/WEB-INF/i18n/page-login_en.properties
+++ b/patient-webapp/src/main/webapp/WEB-INF/i18n/page-login_en.properties
@@ -1,2 +1,4 @@
 message.bad_auth_data = Invalid username and password!
-message.login_success = You've been logged out successfully.
+message.logout_success = You've been logged out successfully.
+message.logout_error = The logout was unsuccessful. Please, try again!
+message.login_session_error = The login was unsuccessful. Please, try again!
