create login page and login process

--- a/patient-webapp/src/main/webapp/WEB-INF/i18n/page-login_en.properties
+++ b/patient-webapp/src/main/webapp/WEB-INF/i18n/page-login_en.properties
@@ -2,3 +2,12 @@ message.bad_auth_data = Invalid username and password!
 message.logout_success = You've been logged out successfully.
 message.logout_error = The logout was unsuccessful. Please, try again!
 message.login_session_error = The login was unsuccessful. Please, try again!
+
+placeholder.name = Enter user name...
+placeholder.password = Password...
+
+error.username = Please enter your username!
+error.password = Please enter your password!
+
+label.login = Login
+label.remember = Remember me
