add navbar and logged interceptor

--- a/patient-webapp/src/main/webapp/WEB-INF/i18n/default_en.properties
+++ b/patient-webapp/src/main/webapp/WEB-INF/i18n/default_en.properties
@@ -2,3 +2,10 @@ version = v1.0
 
 label.username = Username
 label.password = Password
+
+navbar.menu.mycalendar = My calendar
+navbar.menu.usermanager = User manager
+navbar.menu.welcome = Hi,
+navbar.menu.myaccount = My Account
+navbar.menu.about = About PM Soft
+navbar.menu.logout = Sign out
